# Image-Filtering-and-Histogram-Analysis-Tool

./: .gitignore  CMakeLists.txt  readme.md
gui/: main.cpp
gui/addons/filter/: average.hpp  gaussian.hpp  highpass.hpp  laplacian.hpp  median.hpp  sobel.hpp
gui/addons/geometric/: rotation.hpp  zoom.hpp
gui/addons/histogram/: compression.hpp  equalize.hpp  shift.hpp  show.hpp  stretch.hpp
gui/components/: BoolInput.hpp  IntegerInput.hpp  OddIntegerInput.hpp  TextInput.hpp
include/: base.h  filter.h  geometric.h  histogram.h
src/: base.cpp  filter.cpp  geometric.cpp  histogram.cpp  main.cpp
